--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="demo"></p>
     <script src="testData.js">
     </script>
-    <script src="test8.js">
+    <script src="Case1Report.js">
     </script>
 </body>
 
